# multithreading

./: README.md
file-processor/: TASK.md
file-processor/c-ansi/: CMakeLists.txt
file-processor/c-ansi/src/: file.h  main.c  report.c  report.h  util.h
file-processor/c-ansi/src/platform_directory/: platform_dir_win32.c  platform_directory.h
file-processor/c-ansi/src/platform_threading/: platform_thread.h  platform_threading_win32.c
file-processor/rust/: .gitignore  Cargo.toml
file-processor/rust/src/: main.rs
